[package]
name = "fin_db"
version = "0.2.0"
authors = ["FindoraNetwork"]
edition = "2021"

[dependencies]
ruc = "1.0"
fmerk = { git = "https://github.com/FindoraNetwork/fmerk.git", branch = "trace_option"}
storage = { path = "../storage", version = "0.2" }

[features]
iterator = ["storage/iterator"]
