[package]
name = "fmerk"
description = "Merkle key/value store"
version = "0.1.1"
authors = ["FindoraNetwork"]
edition = "2018"
license = "MIT"
repository = "https://github.com/FindoraNetwork/fmerk"
readme = "README.md"
keywords = ["merkle", "merkle-tree", "fmerk", "merk", "findora"]
exclude = [".*"]

[dependencies]
time = "0.1.42"
hex = "0.4.2"
colored = "1.8.0"
num_cpus = "1.10.0"
byteorder = "1.3.2"
failure = "0.1.6"
ed2 = "0.1.6"

[dependencies.blake2-rfc]
version = "0.2.18"
features = ["bench"]

[dependencies.rand]
version = "0.7.0"
features = ["small_rng"]

[dependencies.rocksdb]
version = "0.17.0"
default-features = false

[dependencies.jemallocator]
version = "0.3.2"
features = ["disable_initial_exec_tls"]
