[package]
name = "storage"
version = "0.2.0"
authors = ["FindoraNetwork"]
edition = "2021"

[dependencies]
parking_lot = "0.12"
rand = "0.8"
ruc = "1.0"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
fin_db = { path = "../fin_db", version = "0.2" }
temp_db = { path = "../temp_db", version = "0.2" }
mem_db = { path = "../mem_db", version = "0.2" }

[features]
default = [ "optimize_get_ver" ]
iterator = []
optimize_get_ver = []
